--- a/app/src/main/res/layout/password.xml
+++ b/app/src/main/res/layout/password.xml
@@ -2,7 +2,6 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,66 +14,56 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Membership Details"
+            android:text="Password Manager"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/et_membership_name"
+            app:layout_constraintBottom_toTopOf="@+id/et_service_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
         <EditText
-            android:id="@+id/et_membership_name"
+            android:id="@+id/et_service_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Membership Name"
+            android:hint="Service Name"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_title"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp" />
 
         <EditText
-            android:id="@+id/et_company_name"
+            android:id="@+id/et_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Company Name"
-            android:inputType="text"
-            app:layout_constraintTop_toBottomOf="@id/et_membership_name"
+            android:hint="Username/Email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintTop_toBottomOf="@id/et_service_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp" />
 
         <EditText
-            android:id="@+id/et_price"
+            android:id="@+id/et_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Price"
-            android:inputType="numberDecimal"
+            android:hint="Password"
+            android:inputType="textPassword"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/et_company_name"
+            app:layout_constraintTop_toBottomOf="@id/et_username"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/et_payment_date"/>
-
-        <EditText
-            android:id="@+id/et_payment_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="Payment Due Date"
-            android:inputType="date"
-            app:layout_constraintTop_toTopOf="@id/et_price"
-            app:layout_constraintStart_toEndOf="@id/et_price"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-            android:id="@+id/btn_submit"
+            android:id="@+id/btn_save"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Submit"
+            android:text="Save"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/et_payment_date"
+            app:layout_constraintTop_toBottomOf="@id/et_password"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
