--- a/app/src/main/res/layout/passwordmanager.xml
+++ b/app/src/main/res/layout/passwordmanager.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     tools:context="creditcard.CreditCardActivity">
 
-
+    <!-- Add Card Button -->
     <Button
         android:id="@+id/btn_add_card"
         android:layout_width="0dp"
